# mcp-vuln-scanner

./: .env.example  CHANGELOG.md  README.md  final_report.html  full_report.html  pro_report.html  pro_report_new.html  pyproject.toml  report.html  report.json  setup.py  test.html  test_guard.py  test_secrets.json  tools_test.json  tools_test.json.backup
.github/workflows/: mcp-security-scan.yml  release.yml
Desktop/skill-expirience-main/: .gitattributes
data/: threat_intelligence.json
docs/: CLI-REFERENCE.md  DASHBOARD.md  INSTALLATION.md  THREAT-INTELLIGENCE.md  USAGE.md  generate_docs.sh
docs/screenshots/: fix.txt  help.txt  report.html  scan.txt
examples/: README.md  dangerous_tools.json  safe_tools.json  scan-strict.json  scan.yaml
mcp-security-scanner/: CONTRIBUTING.md  Dockerfile  README.md  README_PACKAGING.md  tools.json
mcp-security-scanner/docs/: ai-fix.md
scripts/: install-hook.py  pre-commit
src/mcp_security_scanner.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/mcp_vuln_scanner.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/scanner/: cli.py  dashboard.py  license.py  (+4 more)
static/: dashboard.js  style.css
templates/: index.html
tests/: test_additional_rules.py  test_ai_fixer_patch.py  test_cli_features.py  test_config_and_sbom.py  test_dangerous_ops.py  test_dashboard.py  test_github_annotations.py  test_plugins.py  test_pre_commit_hook.py  test_sbom.py  test_threat_intelligence.py  test_tool_poisoning.py
vscode-extension/: mcp-security-scanner-0.1.0.vsix  package-lock.json  package.json
(+9 files in other folders)
