[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-vuln-scanner"
version = "1.2.0"
description = "AI-powered MCP vulnerability scanner"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "click>=8.0.0",
  "pyyaml>=6.0",
  "jsonschema>=4.0",
  "requests>=2.28",
  "tomli>=2.0.0",
  "aiohttp>=3.9.0",
  "sseclient>=0.0.27",
]

[project.entry-points.console_scripts]
mcp-scan = "scanner.cli:scan"
